新規登録画面とnewアクションとcreateアクションの実装

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,6 +9,9 @@ html
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
   body
     .app-title.navbar.navbar-expand-md.navbar-light.bg-light
-      .navbar-brand Taskleaf
+      .navbar-brand.ms-3 Taskleaf
     .container
+      - if flash.notice.present?
+      	.alert.alert-success= flash.notice
       = yield
+
